--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     The (optional) <header> HTML element represents introductory content that would usually be shown at the top of every page in a group of pages.
     For example, a logo or top banner, with a navigation bar.
     -->
-    <header></header>
+    <header> test </header>
 
     <!--
     The (optional) <section> element is used to encapsulate standalone sections of content.
