--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
     The (optional) <footer> HTML element represents content that appears at the bottom of every page in a group of pages.
     For example, copyright information, licensing terms, contact information.
     -->
-    <footer></footer>
+    <footer>test number 2</footer>
   </body>
 </html>
