--- a/index.html
+++ b/index.html
@@ -30,13 +30,22 @@
     It makes sense to use them for a portfolio, but perhaps not for an essay.
     -->
     <section>
-      <h1>Your Name / About Me</h1>
-      <p>Add a short introduction about yourself here</p>
+      <h1>About Me</h1>
+      <p>I am Kaydn and I like programming</p>
     </section>
 
     <section>
-      <h4>First Header</h4>
+      <h1>Education</h1>
       <!-- Your organised portfolio content goes here. -->
+      <h3>Nanyang Junior College</h3>
+      <ul>
+        <li>Physics</li>
+        <li>Math</li>
+        <li>Economics</li>
+        <li>Computing<ul>
+          <li>Python, HTML, CSS</li>
+        </ul></li>
+      </ul>
       <!--
       Use Google / ChatGPT to determine which is the most semantically appropriate element tag to use for each type of content:
       paragraph text, bulleted/numbered lists, tables, images, separators, ...
