--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
     -->
     <section>
       <h1>About Me</h1>
+      <br>
       <p>I am Kaydn and I like programming</p>
     </section>
 
     <section>
       <h1>Education</h1>
+      <hr>
       <!-- Your organised portfolio content goes here. -->
       <h3>Nanyang Junior College</h3>
       <ul>
@@ -45,6 +47,12 @@
         <li>Computing<ul>
           <li>Python, HTML, CSS</li>
         </ul></li>
+      </ul>
+
+      <h1>Past Experiences</h1>
+      <ul>
+        <li>Robotics Club</li>
+        <li></li>
       </ul>
       <!--
       Use Google / ChatGPT to determine which is the most semantically appropriate element tag to use for each type of content:
